# TCA_project

./: gru.ipynb  lstm_graficos_predicciones.ipynb  model_lstm.py  prophet.ipynb  pyproject.toml
