[project]
name = "lstm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.9"
dependencies = [
    "scikit-learn<=1.4.2",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "pandas>=2.2.3",
    "scikeras>=0.13.0",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "tensorflow>=2.19.0",
    "mlflow>=2.22.0",
]
